cluster/bookstack/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-mariadb
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app: mariadb
    component: master
    release: bookstack
