cluster/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: bookstack
    release: bookstack
